# pulse-cast

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
.github/workflows/: create-n-publish-to-docker.yaml
migrations/2024-06-28-083251_create_users/: up.sql
migrations/2024-06-28-083256_create_devices/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/core/: mod.rs
src/core/errors/: mod.rs
src/core/validations/: boolean_validator.rs  mod.rs
src/models/: device.rs  mod.rs  user.rs
src/oauth_fcm/: Cargo.toml
src/oauth_fcm/src/: error.rs  lib.rs  token_manager.rs
src/pulsar/: create_consumer.rs  messages.rs  mod.rs  run_consumer.rs
src/routes/: mod.rs  register_device.rs  root.rs
