[package]
name = "pulse-cast"
version = "0.1.0"
edition = "2021"

exclude = [
    ".github/*"
]


[dependencies]
axum = "0.7"
diesel = { version = "2.2.0", features = ["sqlite"]}
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9"
thiserror = "1.0"
tracing = "0.1.40"
oauth_fcm = { path = "./src/oauth_fcm" }