[package]
name = "pulse-cast"
version = "0.1.0"
edition = "2021"

exclude = [
    ".github/*"
]


[dependencies]
axum = { version = "0.7", features = ["macros"] }
futures = "0.3"
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.8"
pulsar = "6.3.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = "9"
thiserror = "1.0"
tracing = "0.1.40"
oauth_fcm = { path = "./src/oauth_fcm" }